@@ -1,16 +1,16 @@
 use strict;
 use warnings;
 
-use Test::More;
+use Test::More tests => 5;
 
 # ABSTRACT: Basic Test for documentation in .pod
 
-use Dist::Zilla::Util::Test::KENTNL 1.004 qw( dztest );
-use Test::DZil qw( simple_ini );
+use Test::DZil qw( simple_ini Builder );
+use Path::Tiny qw( path );
 
-my $test = dztest();
-$test->add_file( 'lib/Example.pm'  => 1 );
-$test->add_file( 'lib/Example.pod' => <<'EOF' );
+my $files = {};
+$files->{'source/lib/Example.pm'}  = 1;
+$files->{'source/lib/Example.pod'} = <<'EOF';
 
 # PODNAME: Foo
 
@@ -23,11 +23,13 @@ This is a description
 1;
 
 EOF
+$files->{'source/dist.ini'} = simple_ini( [ 'GatherDir' => {} ], [ 'Readme::Brief' => {} ], );
+my $test = Builder->from_config( { dist_root => 'invalid' }, { add_files => $files } );
+$test->chrome->logger->set_debug(1);
+$test->build;
 
-$test->add_file( 'dist.ini' => simple_ini( [ 'GatherDir' => {} ], [ 'Readme::Brief' => {} ], ) );
-$test->build_ok;
-
-my $src_file = $test->test_has_built_file('README');
+my $src_file = path( $test->tempdir, 'build', 'README' );
+ok( $src_file->exists, 'README generated' );
 my @lines = $src_file->lines_utf8( { chomp => 1 } );
 
 use List::Util qw( first );
@@ -36,6 +38,3 @@ ok( ( first { $_ eq 'Foo' } @lines ),                   'Document name found and
 ok( ( first { $_ eq 'This is a description' } @lines ), 'Description injected' );
 ok( ( first { $_ eq 'INSTALLATION' } @lines ),          'Installation section injected' );
 ok( ( first { $_ eq 'COPYRIGHT AND LICENSE' } @lines ), 'Copyright section injected' );
-
-done_testing;
-
